--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
+@import '~bootstrap/dist/css/bootstrap.css';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
@@ -120,6 +121,66 @@ body {
         display: none;
       }
     }
+    .dropdown-menu.show {
+      transform: translate3d(0px, 70px, 0px) !important;
+      position: absolute;
+      min-width: 16rem;  // antisipasi jika nama atau email user pendek
+      top: 70px;
+      border: 2px solid $primary-color;
+      padding: 1rem 1rem 0.5rem 1rem;
+      border-radius: 10px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+    
+      display: grid;
+      grid-template-columns: auto 2fr;
+      grid-template-areas: 
+        "profile-element name-element"
+        "profile-element date-element"
+        "content-element content-element";
+    
+      &:after{
+        content:"";
+        position: absolute;
+        // border: 2px solid $primary-color;
+        top:-32px;
+        right:calc(0% + 5px);
+        border-top:15px solid transparent;
+        border-right:15px solid transparent;
+        border-bottom:15px solid $primary-color;
+        border-left:15px solid transparent;
+      }
+    
+      .profile__image {
+        grid-area: profile-element;
+        width: 50px;
+        border-radius: 50%;
+        height: auto;
+        margin-right: 0.8rem;
+      }
+    
+      .review__name {
+        grid-area: name-element;
+        align-self: end;
+        line-height: 1.2; // antisipasi jika nama user panjang
+        margin: 0;
+      }
+      
+      .review__date {
+        font-size: 0.8rem;
+        grid-area: date-element;
+        align-self: start;
+        margin: 0;
+        margin-top: 4px;
+      }
+    
+      .review__content {
+        grid-area: content-element;
+        padding: 10px 0;
+        text-align: center;
+        font-weight: bold;
+        color: $primary-color;
+      }
+    }
   }
 
   .profile-picture {
@@ -135,6 +196,102 @@ body {
     background-color: $background-wallet;
     border-radius: 0.5rem;
     padding: 10px;
+
+    .dropdown-menu.show {
+      transform: translate3d(-12px, 70px, 0px) !important;
+      position: absolute;
+      // top: 70px;
+      // border: 2px solid $primary-color;
+      padding: 0.5rem 1rem;
+      background-color: $background-wallet;
+      color: white;
+      font-weight: 600;
+      // border-radius: 10px;
+      // box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+    
+      // display: grid;
+      // grid-template-columns: auto 2fr;
+      // grid-template-areas: 
+      //   "profile-element name-element"
+      //   "profile-element date-element"
+      //   "content-element content-element";
+    
+      &:after{
+        content:"";
+        position: absolute;
+        // border: 2px solid $primary-color;
+        top:-30px;
+        left:calc(50% - 10px);
+        border-top:15px solid transparent;
+        border-right:15px solid transparent;
+        border-bottom:15px solid $background-wallet;
+        border-left:15px solid transparent;
+      }
+    
+      .container {
+        display: block;
+        position: relative;
+        padding-left: 30px;
+        padding-block: 10px;
+        // margin-block: 8px;
+        cursor: pointer;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+      
+      /* Hide the browser's default radio button */
+      .container input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+      }
+      
+      /* Create a custom radio button */
+      .checkmark {
+        position: absolute;
+        top: 11px;
+        left: 0;
+        height: 20px;
+        width: 20px;
+        border: 2px solid white;
+        border-radius: 50%;
+      }
+      
+      /* On mouse-over, add a grey background color */
+      .container:hover input ~ .checkmark {
+        background-color: #ccc;
+      }
+      
+      /* When the radio button is checked, add a blue background */
+      .container input:checked ~ .checkmark {
+      
+      }
+      
+      /* Create the indicator (the dot/circle - hidden when not checked) */
+      .checkmark:after {
+        content: "";
+        position: absolute;
+        display: none;
+      }
+      
+      /* Show the indicator (dot/circle) when checked */
+      .container input:checked ~ .checkmark:after {
+        display: block;
+      }
+      
+      /* Style the indicator (dot/circle) */
+      .container .checkmark:after {
+         top: 3px;
+        left: 3px;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        background-color: white;
+      }
+    }
+
     a {
       font-size: 14px;
       display: flex;
@@ -181,7 +338,7 @@ body {
   grid-template-columns: max-content max-content;
   align-items: center;
   column-gap: 1.3rem;
-  padding: 0.5rem 0 0.5rem 1.5rem;
+  padding: 0.7rem 0 0.7rem 1.5rem;
 }
 
 .nav_logo {
@@ -235,7 +392,7 @@ body {
 .nav_icon {
   font-size: 1.25rem;
 }
-.show {
+.show-navbar {
   left: 0;
 }
 .body-pd {
@@ -256,63 +413,7 @@ a {
   cursor: pointer;
 }
 
-.profile-container {
-  position: absolute;
-	top: 70px;
-  border: 2px solid $primary-color;
-  padding: 5px;
-  border-radius: 10px;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
 
-  display: grid;
-  grid-template-columns: auto 2fr;
-  grid-template-areas: 
-    "profile-element name-element"
-    "profile-element date-element"
-    "content-element content-element";
-
-  &:after{
-    content:"";
-    position: absolute;
-    top:-30px;
-    left:calc(50% - 7px);
-    border-top:15px solid transparent;
-    border-right:15px solid transparent;
-    border-bottom:15px solid #fff;
-    border-left:15px solid transparent;
-  }
-
-  .profile__image {
-    grid-area: profile-element;
-    width: 50px;
-    border-radius: 50%;
-    height: auto;
-    margin-right: 0.8rem;
-  }
-
-  .review__name {
-    grid-area: name-element;
-    align-self: end;
-    margin: 0;
-  }
-  
-  .review__date {
-    font-size: 0.8rem;
-    grid-area: date-element;
-    align-self: start;
-    margin: 0;
-  }
-
-  .review__content {
-    grid-area: content-element;
-    margin-top: 20px;
-    text-align: center;
-    margin: 0.7rem 0 0 0;
-    font-weight: bold;
-    color: $primary-color;
-  }
-
-}
 // .nav_name {
 //   display: none;
 // }
@@ -343,7 +444,7 @@ a {
     left: 0;
     padding: 1rem 1rem;
   }
-  .show {
+  .show-navbar {
     width: calc(var(--nav-width) + 156px);
     // width: calc(var(--nav-width) + 300px);
   }
