--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,12 +13,14 @@
     <link rel="preload" as="style" onload="this.rel = 'stylesheet'" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://code.iconify.design/3/3.0.0/iconify.min.js"></script>
   </head>
   
   <body id="body-pd" tabindex="0">
   </body>
+
+  
+  
 </html>
 
 <!-- <select name="wallet" id="wallet">
@@ -31,5 +33,3 @@
       <span class="nav_name">Dompet 2</span>
     </option>
   </select> -->
-  
-  <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> -->
