--- a/src/styles/pages/loginRegister/_login.scss
+++ b/src/styles/pages/loginRegister/_login.scss
@@ -16,7 +16,41 @@ background: #eee;
 
 form {
  width: 75%;
+}
 
+.button-login {
+ font-family: "Montserrat", sans-serif;
+ font-weight: 700;
+ margin-top: 30px;
+ line-height: 0;
+ width: 200px;
+ padding: 20px 30px;
+ border-radius: 4px;
+ transition: 0.5s;
+ text-decoration: none;
+ color: #fff;
+ border-style:none;
+ background: #42B2FA;
+ border-radius: 20px;
+ box-shadow: 0px 5px 30px rgba(216, 220, 255, 0.4);
+}
+
+.button-register {
+ font-family: "Montserrat", sans-serif;
+ font-weight: 700;
+ margin-top: 30px;
+ line-height: 0;
+ width: 200px;
+ padding: 20px 30px;
+ border-radius: 20px;
+ border: #3c91ea;
+ border-style:solid;
+ transition: 0.5s;
+ text-decoration: none;
+ color: black;
+ background: white;
+
+ box-shadow: 0px 5px 30px rgba(216, 220, 255, 0.4);
 }
 
 .form-input {
